--- a/app/views/events/user/_view.rhtml
+++ b/app/views/events/user/_view.rhtml
@@ -5,7 +5,7 @@
   <b>Show Bookings</b>  | <a href='javascript:void(0);' onclick='SCMS.showHide("events_credits","events_sessions");' class='ajax_link'>  Show Credits</a><br/><br/>
 <b>Credits: </b> 
 <%  @user_credits.each do |credit_type| -%>
-<%= credit_type.events_credit_type.name %>: <%= credit_type.credits %> &nbsp;&nbsp;
+<%= credit_type.events_credit_type.name if credit_type.events_credit_type %>: <%= credit_type.credits %> &nbsp;&nbsp;
 <% end -%>
 <br/><br/>
 
@@ -24,7 +24,7 @@
 
 <b>Credits: </b> 
 <%  @user_credits.each do |credit_type| -%>
-<%= credit_type.events_credit_type.name %>: <%= credit_type.credits %> &nbsp;&nbsp;
+<%= credit_type.events_credit_type.name if credit_type.events_credit_type %>: <%= credit_type.credits %> &nbsp;&nbsp;
 <% end -%>
 <br/><br/>
 
